fix align text header in screen login

--- a/src/screens/LoginScreen.css
+++ b/src/screens/LoginScreen.css
@@ -19,7 +19,6 @@
 
 .textLogin{
   font-size: 20px!important;
-  width: 437px;
   margin: auto;
   font-weight: 400!important;
   line-height: 28px;
